--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+	<%= render 'layouts/navigation' %>
+	<div class="px-6 py-6">	
     <%= yield %>
+	</div>
   </body>
 </html>
