--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,2 +1,86 @@
-<h1>Employees#index</h1>
-<p>Find me in app/views/employees/index.html.erb</p>
+<div class="grid grid-cols-2 gap-1">
+  <div class="row">
+		<div class="xl:w-3/4 2xl:w-4/5 w-full">
+			<div class="px-4 md:px-10 py-4 md:py-7">
+				<div class="sm:flex items-center justify-between">
+					<h1 tabindex="0" class="focus:outline-none text-base sm:text-lg md:text-xl lg:text-2xl font-bold leading-normal text-gray-800 dark:text-white">Employees:</h1>
+				</div>
+			</div>
+			<div class="bg-white dark:bg-gray-900 px-4 md:px-10 pb-5">
+				<div class="overflow-x-auto">
+					<table class="w-full whitespace-nowrap">
+						<tbody>
+							<% @employees.each do |employee| %>
+							<tr tabindex="0" class="focus:outline-none text-sm leading-none text-gray-600 dark:text-gray-200   h-16">
+								<td class="w-1/2">
+									<div class="flex items-center">
+										<div class="w-10 h-10 bg-gray-700 rounded-sm flex items-center justify-center">
+											<p class="text-xs font-bold leading-3 text-white">FIG</p>
+										</div>
+										<div class="pl-2">
+											<%= link_to "#{employee.first_name} #{employee.last_name}", employee_path(employee), class: "text-sm font-medium leading-none text-gray-800 dark:text-white"%>
+											<p class="text-xs leading-3 text-gray-600 dark:text-gray-200   mt-2">Created: <%= time_ago_in_words(employee.created_at) %></p>
+										</div>
+									</div>
+								</td>
+								<td class="pl-8">
+									<p>
+										<%= link_to "View", employee_path(employee), type: "button", 
+										class: "inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg 
+														focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+									</p>
+								</td>
+								<td class="pl-8">
+									<p>
+										<%= link_to "Edit", edit_employee_path(employee), type: "button", 
+										class: "inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg 
+														focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+									</p>
+								</td>
+								<td class="pl-8">
+									<p>
+										<%= link_to "Delete", employee_path(employee), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, type: "button", 
+										class: "inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg 
+														focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+									</p>
+								</td>
+								<% end %>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+
+  <div class="row">
+		<div class="xl:w-3/4 2xl:w-4/5 w-full">
+			<div class="px-4 md:px-10 py-4 md:py-7">
+				<div class="sm:flex items-center justify-between">
+					<h1 class="focus:outline-none text-base sm:text-lg md:text-xl lg:text-2xl font-bold leading-normal text-gray-800 dark:text-white">Search:</h1>
+				</div>
+			</div>
+			<div class="bg-white dark:bg-gray-900 px-4 md:px-10 pb-5">
+				<div class="overflow-x-auto">
+					<table class="w-full whitespace-nowrap">
+						<tbody>
+								<tr tabindex="0" class="focus:outline-none text-sm leading-none text-gray-600 dark:text-gray-200   h-16">
+									<td class="w-1/2">
+										<div class="flex items-center">
+											<div class="w-10 h-10 bg-gray-700 rounded-sm flex items-center justify-center">
+												<p class="text-xs font-bold leading-3 text-white">FIG</p>
+											</div>
+											<div class="pl-2">
+												<p class="text-sm font-medium leading-none text-gray-800 dark:text-white ">Fonts.fig</p>
+												<p class="text-xs leading-3 text-gray-600 dark:text-gray-200   mt-2">Shared by Ashley Wilson</p>
+											</div>
+										</div>
+									</td>
+								</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
