--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Employees#new</h1>
-<p>Find me in app/views/employees/new.html.erb</p>
+<div class="container mx-auto">
+	<h1 class="text-center text-xl pb-4">Create a new employee:</h1>
+	
+	<%= render 'employee_form' %>
+
+	<p class="text-center py-16">
+		<%= link_to "Return to the employee index page", employees_path %>
+	</p>
+</div>
