--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Employees#show</h1>
-<p>Find me in app/views/employees/show.html.erb</p>
+<div class="container mx-auto">
+	<h1 class="text-center text-xl pb-4">Viewing Employee:</h1>
+
+	<div class="flex justify-center">
+		<div class="block p-6 rounded-lg shadow-lg bg-white max-w-sm">
+			<h5 class="text-gray-900 text-2xl leading-tight font-medium"><%= "#{@employee.first_name} #{@employee.last_name}" %></h5>
+			<h5 class="text-gray-900 text-base leading-tight font-medium mb-2"><%= @employee.email %></h5>
+			<p class="text-gray-700 text-base mb-4">
+				<%= @employee.bio %>
+			</p>
+			<%= link_to "Edit", edit_employee_path(@employee), type: "button", 
+										class: "inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg 
+														focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+			<%= link_to "Delete", employee_path(@employee), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, type: "button", 
+										class: "inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg 
+														focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+		</div>
+	</div>
+
+	<p class="text-center py-16">
+		<%= link_to "Return to the employee index page", employees_path %>
+	</p>
+</div>
