--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/errors' %>
+
 <div class="container mx-auto">
 	<h1 class="text-center text-xl pb-4">Create a new employee:</h1>
 	
