--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -14,8 +14,8 @@
 							<tr tabindex="0" class="focus:outline-none text-sm leading-none text-gray-600 dark:text-gray-200   h-16">
 								<td class="w-1/2">
 									<div class="flex items-center">
-										<div class="w-10 h-10 bg-gray-700 rounded-sm flex items-center justify-center">
-											<p class="text-xs font-bold leading-3 text-white">FIG</p>
+										<div class="w-10 h-10 rounded-sm flex items-center justify-center">
+											<p class="text-xs font-bold leading-3 text-white"><%= gravatar_for employee %></p>
 										</div>
 										<div class="pl-2">
 											<%= link_to "#{employee.first_name} #{employee.last_name}", employee_path(employee), class: "text-sm font-medium leading-none text-gray-800 dark:text-white"%>
