--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -3,6 +3,7 @@
 
 	<div class="flex justify-center">
 		<div class="block p-6 rounded-lg shadow-lg bg-white max-w-sm">
+			<p class="pb-4"><%= gravatar_for @employee, size: 200 %></p>
 			<h5 class="text-gray-900 text-2xl leading-tight font-medium"><%= "#{@employee.first_name} #{@employee.last_name}" %></h5>
 			<h5 class="text-gray-900 text-base leading-tight font-medium mb-2"><%= @employee.email %></h5>
 			<p class="text-gray-700 text-base mb-4">
