pagination gem added, digg-pagination added to employee index, digg-pagination CSS added to stylesheet

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -51,6 +51,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="px-10 py-4">
+			<div class="digg_pagination">
+				<%= will_paginate @employees, :container => false %>
+			</div>
+		</div>
 	</div>
 
   <div class="row">
