--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -2,7 +2,7 @@
 	<h1 class="text-center text-xl pb-4">Viewing Employee:</h1>
 
 	<div class="flex justify-center">
-		<div class="block p-6 rounded-lg shadow-lg bg-white max-w-sm">
+		<div class="block p-6 rounded-lg shadow-xl bg-white max-w-sm">
 			<div class="flex justify-center">
 				<p class="pb-4"><%= gravatar_for @employee, size: 200 %></p>
 			</div>
