search feature with turbo and stimulus setup. Need to fix delete flash message from index, pagination interfering with search query parameters, and remove pagination when search results are <= 8

--- a/app/views/employees/_employee_form.html.erb
+++ b/app/views/employees/_employee_form.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-center">
+<div class="employee-form flex justify-center">
 	<div class="block p-6 rounded-lg shadow-lg bg-white max-w-sm">
 		<%= form_with(model: @employee, local: true) do |f| %>
 			<div class="py-2">
