--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -19,6 +19,7 @@
 											class: "inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg 
 															focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
 			</div>
+			<p class="flex justify-center pt-4">Created: <%= time_ago_in_words(@employee.created_at) %> ago</p>
 		</div>
 	</div>
 
