--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
 		<%= render 'layouts/navigation' %>
-		<div class="px-6 py-6">	
+		<div class="container mx-auto my-4 lg:px-10 px-4">	
 			<%= render 'layouts/messages' %>
 			<%= yield %>
 		</div>
