--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
+<div class="signup-form mx-auto">
+	<h2 class="text-center text-xl pb-4">Sign up</h2>
+		<div class="flex justify-center">
+			<div class="block p-6 rounded-lg shadow-xl bg-white max-w-sm">
+				
+					<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+						<%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+						<div class="field">
+							<%= f.label :email %><br />
+							<%= f.email_field :email, autofocus: true, autocomplete: "email", size: "28x1", class: "border rounded" %>
+						</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+						<div class="field">
+							<%= f.label :password %>
+							<% if @minimum_password_length %>
+							<em>(<%= @minimum_password_length %> characters minimum)</em>
+							<% end %><br />
+							<%= f.password_field :password, autocomplete: "new-password", size: "28x1", class: "border rounded" %>
+						</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+						<div class="field">
+							<%= f.label :password_confirmation %><br />
+							<%= f.password_field :password_confirmation, autocomplete: "new-password", size: "28x1", class: "border rounded" %>
+						</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+						<div class="actions flex justify-center">
+							<%= f.submit "Sign up" %>
+						</div>
+					<% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+					<%= render "devise/shared/links" %>
+				
+			</div>
+		</div>
+	</div>
+</div>
