--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -13,8 +13,8 @@
 			</p>
 			<div class="flex justify-between pt-4">
 				<%= link_to "Edit", edit_employee_path(@employee), type: "button", 
-											class: "inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg 
-															focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+											class: "inline-block px-6 py-2.5 bg-yellow-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-yellow-700 hover:shadow-lg 
+															focus:bg-yellow-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-yellow-800 active:shadow-lg transition duration-150 ease-in-out" %>
 				<%= link_to "Delete", employee_path(@employee), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, type: "button", 
 											class: "inline-block px-6 py-2.5 bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg 
 															focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
