--- a/app/views/employees/_employee_form.html.erb
+++ b/app/views/employees/_employee_form.html.erb
@@ -27,9 +27,9 @@
 			</div>
 			<div class="pt-2 flex justify-center">
 				<P>
-					<%= f.submit class: "inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded 
-															shadow-md hover:bg-green-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 
-															active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out" %>
+					<%= f.submit class: "inline-block px-6 py-2.5 bg-green-600 text-white font-medium text-xs leading-tight uppercase rounded 
+															shadow-md hover:bg-green-700 hover:shadow-lg focus:bg-green-700 focus:shadow-lg focus:outline-none focus:ring-0 
+															active:bg-green-800 active:shadow-lg transition duration-150 ease-in-out" %>
 				</P>
 			</div>
 		<% end %>
