--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,14 +1,14 @@
 <% if notice %>
-	<div class="mx-auto md:w2/3 w-full flex">
+	<div class="flash_messaging mx-auto md:w2/3 w-full flex">
 		<p class="mx-auto py-2 px-2 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block">
-			<%= notice %>
+				<%= notice %>
 		</p>
 	</div>
 <% end %>
 
 
 <% if alert %>
-	<div class="mx-auto md:w2/3 w-full flex">
+	<div class="flash_messaging mx-auto md:w2/3 w-full flex">
 		<p class="mx-auto py-2 px-2 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block">
 			<%= alert %>
 		</p>
