--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
 
   <body>
 		<%= render 'layouts/navigation' %>
-		<div class="container mx-auto my-4 lg:px-10 px-4">	
-			<%= render 'layouts/messages' %>
+		<div class="container mx-auto my-4 lg:px-10 px-4">
+			<div id="flash" class="flash">
+				<%= render 'layouts/flash' %>
+			</div>
 			<%= yield %>
 		</div>
   </body>
